--- a/numerical_method.ipynb
+++ b/numerical_method.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -96,22 +96,20 @@
      "text": [
       "Reynold's number  79.36031984007995\n",
       "Friction factor  0.1922294318332183\n",
-      "Calculated v_2  4.1512602626726665\n",
+      "Calculated v_2  4.154409919315894\n",
       "\n",
       "\n",
-      "v2_guess  10 calculated_v2  4.1512602626726665\n",
-      "Reynold's number  32.94453421851172\n",
-      "Friction factor  0.32688213526439186\n",
-      "Calculated v_2  4.151260262672666\n",
-      "tolerance  8.881784197001252e-16\n",
-      "final v2  4.151260262672666 guess  4.1512602626726665 tol  8.881784197001252e-16\n"
+      "v2_guess  10 calculated_v2  4.154409919315894\n",
+      "Reynold's number  32.96952999437101\n",
+      "Friction factor  0.32671785760881616\n",
+      "Calculated v_2  4.154409919315894\n",
+      "final v2  4.154409919315894 guess  4.154409919315894 tol  0.0\n"
      ]
     }
    ],
    "source": [
     "# set constants\n",
     "diameter = 0.00794\n",
-    "tube_length = 0.80\n",
     "tube_diameter = 0.00794\n",
     "density_water = 1000\n",
     "viscosity = 1.0005\n",
@@ -122,8 +120,10 @@
     "\n",
     "# set variables\n",
     "v2_guess = 10\n",
+    "tube_length = 0.60\n",
     "# z_2 is start height of water\n",
     "z_2 = 0.08 + 0.02 + (1/150 * tube_length)\n",
+    "\n",
     "\n",
     "# calculate reynold's number\n",
     "reynolds_number = reynoldsNumber(density_water, v2_guess, diameter, viscosity)\n",
