--- a/numerical_method.ipynb
+++ b/numerical_method.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,48 +24,71 @@
     "    vel = velocity\n",
     "    dia = diameter\n",
     "    vis = viscosity\n",
+    "    print(\"velocity \", vel)\n",
     "    reynolds_number = (den*vel*dia)/vis\n",
     "    # print(\"Reynold's number \", reynolds_number)\n",
     "    return reynolds_number"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To calculate the friction factor, we need to take into account if it is a turbulent or laminar flow. \n",
+    "\n",
+    "For turbulent flows, I am using an initial guess of the complete turbulence value in order to use the Scipy method \"fsolve\"."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "def frictionFactorCompleteTurbulence(pipe_roughness, diameter):\n",
     "    \"\"\"\n",
-    "    Return the friction factor for complete turbulence. We use this to guess our initial value\n",
+    "    Return the friction factor for complete turbulence. We use this to guess our initial value for turbulent flows\n",
     "    \"\"\"\n",
     "    pip = pipe_roughness\n",
     "    dia = diameter\n",
     "\n",
     "    return (-2*np.log((pip/dia)/3.7))**(-2)\n",
     "\n",
-    "# This is the rearranged expression from above\n",
     "def frictionFactor(reynolds_number, pipe_roughness, diameter):\n",
     "    \"\"\"\n",
     "    Return the friction factor\n",
+    "    Determine if friction factor is turbulent or laminar\n",
     "    \"\"\"\n",
     "    rey = reynolds_number\n",
     "    pip = pipe_roughness\n",
     "    dia = diameter\n",
-    "    f_complete = frictionFactorCompleteTurbulence(pip, dia)\n",
-    "    def calculateFrictionFactor(x):\n",
-    "        return (1/x**0.5) + 2*np.log10(((pip/dia)/3.7) + (2.51/(rey*x**0.5)))\n",
+    "    # print(\"reynoldsNumber \", reynolds_number)\n",
+    "    # if turbulent flow\n",
+    "    if (reynolds_number > 4000):\n",
+    "        f_complete = frictionFactorCompleteTurbulence(pip, dia)\n",
+    "        def calculateFrictionFactor(x):\n",
+    "            return (1/x**0.5) + 2*np.log10(((pip/dia)/3.7) + (2.51/(rey*x**0.5)))\n",
     "\n",
-    "    # Solve the equation\n",
-    "    # plug in the initial guess in second paramter\n",
-    "    solution = fsolve(calculateFrictionFactor, f_complete)\n",
-    "    # print(\"Friction factor \", solution[0])\n",
-    "    return solution[0]"
+    "        # Solve the equation\n",
+    "        # plug in the initial guess in second paramter\n",
+    "        solution = fsolve(calculateFrictionFactor, f_complete)\n",
+    "        # print(\"Friction factor \", solution[0])\n",
+    "        return solution[0]\n",
+    "    # else return laminar flow friction factor\n",
+    "    return 64/rey"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The equation we got for V_2 is the following:\n",
+    "$z_1 +\\frac{p_{\\textrm{atm}} }{\\rho\\,g}+\\frac{\\alpha\\,{A_2 }^2 \\,V_2^2 }{2\\,{A_1 }^2 \\,g}=z_2 +\\frac{k\\,V_2^2 }{2g\\ }+\\frac{P_1+\\rho\\,g\\,h}{\\rho\\,g}+\\frac{\\alpha\\,V_2^2 }{2\\,g}+\\frac{F\\,l\\,V_2^2 }{2\\,D\\,g}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,9 +112,7 @@
     "    a_1 = 0.32 * 0.26 # area of block\n",
     "    # let x = v_2\n",
     "    def calculateV2(x):\n",
-    "        equation = (p_atm/roh*g) + ((alpha*((a_2/a_1) * x)**2)/(2*g)) + z_1 - ((p_2 + (roh * g * h))/(roh * g)) - ((alpha * x ** 2)/(2*g)) - z_2 \n",
-    "        - (fri * (length / dia) * ((x**2)/2*g)) - ((k*x**2)/(2*g))\n",
-    "        return equation\n",
+    "        (p_atm/roh*g) + ((alpha*((a_2/a_1) * x)**2)/(2*g)) + z_1 - ((p_2 + (roh * g * h))/(roh * g)) - ((alpha * x ** 2)/(2*g)) - z_2 - (fri * (length / dia) * ((x**2)/2*g)) - ((k*x**2)/(2*g))\n",
     "    \n",
     "    solution = fsolve(calculateV2, v2_guess)\n",
     "    # print(\"Calculated v_2 \", solution[0])\n",
@@ -104,30 +125,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Our relation of V_1 to V_2\n",
     "def calculateV1(v_2):\n",
     "    return (5.9512*10**-4) * v_2"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we use fixed point iteration to calculate the correct V_2 value (when v2_guess = calculated_v2)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculateV2(tube_length):\n",
+    "def calculateV2(tube_length, height, v2_guess):\n",
     "    # set constants\n",
     "    tube_diameter = 0.00794 #m\n",
     "    density_water = 1000\n",
     "    viscosity = 0.0010005\n",
     "    pipe_roughness = 1.5*10**-6 # m\n",
-    "    z_1 = 0.08 + 0.02 + (1/150 * tube_length)\n",
+    "    z_1 = height\n",
     "    p_atm = 101.325\n",
     "    p_2 = p_atm\n",
     "\n",
     "    # set variables\n",
-    "    v2_guess = 10\n",
     "    # z_2 is start height of water\n",
     "    z_2 = 0\n",
+    "\n",
+    "    # print(\"z_1 \", z_1)\n",
     "\n",
     "\n",
     "    # calculate reynold's number\n",
@@ -137,6 +167,7 @@
     "    friction_factor = frictionFactor(reynolds_number, pipe_roughness, tube_diameter)\n",
     "\n",
     "    # calculate the new v_2\n",
+    "    # z_1 changes each time as it's equal to h\n",
     "    calculated_v2 = getV2(z_2, z_1, friction_factor, tube_length, tube_diameter, p_2, v2_guess)\n",
     "\n",
     "    # initial tolerance\n",
@@ -158,21 +189,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the starting block of our functions.\n",
+    "We set the $\\Delta$ T and then we keep on calculating T until h is less than 0.\n",
+    "Our total time is summed up each iteration."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum_time  39\n"
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "velocity  10.0\n",
+      "reynoldsNumber  79360.31984007994\n",
+      "h  -0.005788266666666698\n",
+      "sum_time  18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/80/sf5zrh2x5p9c8h3qmrspk3h40000gn/T/ipykernel_22346/2760412591.py:23: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n",
+      "  solution = fsolve(calculateV2, v2_guess)\n"
      ]
     }
    ],
    "source": [
+    "# set parameters\n",
     "tube_length = 0.20\n",
     "z_1 = 0.08 + 0.02 + (1/150 * tube_length)\n",
+    "v2_guess = 10\n",
     "h = z_1\n",
     "delta_t = 1 # delta_t = 1 second\n",
     "sum_time = 0\n",
@@ -182,13 +306,14 @@
     "# print(\"v_1 \", v_1, \"v_2 \", v_2)\n",
     "\n",
     "while h > 0:\n",
-    "    v_2 = calculateV2(tube_length)\n",
+    "    v_2 = calculateV2(tube_length, h, v2_guess)\n",
     "    v_1 = calculateV1(v_2)\n",
     "    # print(\"h \", h)\n",
     "    # print(\"v_1 \", v_1)\n",
     "    h = h - (delta_t)*v_1\n",
     "    sum_time += delta_t\n",
     "\n",
+    "print(\"h \", h)\n",
     "print(\"sum_time \", sum_time)"
    ]
   }
